--- a/styles/wga.css
+++ b/styles/wga.css
@@ -1,55 +1,70 @@
 body{
     background: linear-gradient(147deg, rgba(2,0,36,1) 0%, rgba(22,22,119,1) 35%, rgba(0,212,255,1) 100%) no-repeat center center fixed;
 }
+h1, h2{
+    color: white;
+    text-align: center;
+    margin-top: 50px;
+}
+
+.title{
+    font-family: 'Lilita One', cursive;
+}
+
+.utitle{
+    font-family: 'Montserrat', sans-serif; 
+}
 
 .tool_img{
     width: 400px;
     display: block;
     margin-left: auto;
     margin-right: auto;
-    margin-top: 250px;
+    margin-top: 100px;
     border-radius: 10px;
     box-shadow: 0px 0px 21px 0px darkslateblue;
-
 }
 
 .tool_img:hover{
     animation-name: go_up;
     animation-duration: 2s;
     animation-iteration-count: 1;
-    animation-timing-function: ease;
+    animation-timing-function:ease
 }
 
 @keyframes go_up{
     0%{
-        margin-top: 250px;
+        margin-top: 100px;
     }
     100%{
-        margin-top: 225px;
+        margin-top: 75px;
     }
 }
 
 .tool_btn{
     text-align: center;
-    margin-top: 30px;
+    margin-top: 40px;
 }
 
 .dl_btn{
     position: relative;
     color: white;
     font-size: 30px;
-    margin-right: 300px;
+    margin-left: 20px;
+    margin-right: 30px;
     text-decoration: none;
-    border-radius: 20px;
-    border-color: black;
+    border: 2px solid black;
+    border-radius: 1em;
 }
 .dl_btn::before {  
     transform: scaleX(0);
     transform-origin: bottom right;
+    border-radius: 1em;
 }
 .dl_btn:hover::before {
     transform: scaleX(1);
     transform-origin: bottom left;
+    border-radius: 1em;
 }
   
 .dl_btn::before {
@@ -61,4 +76,15 @@ body{
     background: hsl(200 100% 80%);
     z-index: -1;
     transition: transform .3s ease;
+    border: 2px solid transparent;
+    border-radius: 1em;
+}
+
+.icon{
+    text-align: center;
+    margin-top: 100px;
+}
+.ghub{
+    color: white;
+    margin-top: 100px;
 }
