--- a/styles/wga.css
+++ b/styles/wga.css
@@ -4,7 +4,7 @@ body{
 h1, h2{
     color: white;
     text-align: center;
-    margin-top: 50px;
+    margin-top: 20px;
 }
 
 .title{
@@ -20,7 +20,7 @@ h1, h2{
     display: block;
     margin-left: auto;
     margin-right: auto;
-    margin-top: 100px;
+    margin-top: 90px;
     border-radius: 10px;
     box-shadow: 0px 0px 21px 0px darkslateblue;
 }
@@ -34,10 +34,10 @@ h1, h2{
 
 @keyframes go_up{
     0%{
-        margin-top: 100px;
+        margin-top: 90px;
     }
     100%{
-        margin-top: 75px;
+        margin-top: 65px;
     }
 }
 
@@ -50,10 +50,8 @@ h1, h2{
     position: relative;
     color: white;
     font-size: 30px;
-    margin-left: 20px;
-    margin-right: 30px;
     text-decoration: none;
-    border: 2px solid black;
+    border: 2px solid transparent;
     border-radius: 1em;
 }
 .dl_btn::before {  
@@ -82,9 +80,9 @@ h1, h2{
 
 .icon{
     text-align: center;
-    margin-top: 100px;
+    margin-top: 10px;
 }
 .ghub{
     color: white;
-    margin-top: 100px;
+    margin-top: 10px;
 }
