--- a/styles/wga.css
+++ b/styles/wga.css
@@ -1,5 +1,5 @@
 body{
-    background: linear-gradient(147deg, rgba(2,0,36,1) 0%, rgba(22,22,119,1) 35%, rgba(0,212,255,1) 100%) no-repeat center center fixed;
+    background:  radial-gradient(circle, rgba(2,0,36,1) 37%, rgba(0,212,255,1) 100%);
 }
 h1, h2{
     color: white;
@@ -29,7 +29,7 @@ h1, h2{
     animation-name: go_up;
     animation-duration: 2s;
     animation-iteration-count: 1;
-    animation-timing-function:ease
+    animation-timing-function: ease;
 }
 
 @keyframes go_up{
