--- a/styles/wga.css
+++ b/styles/wga.css
@@ -1,5 +1,5 @@
 body{
-    background:  radial-gradient(circle, rgba(2,0,36,1) 37%, rgba(0,212,255,1) 100%);
+    background: radial-gradient(circle, rgba(2,0,36,1) 0%, rgba(0,212,255,1) 60%, rgba(2,0,36,1) 100%);
 }
 h1, h2{
     color: white;
