--- a/styles/wga.css
+++ b/styles/wga.css
@@ -1,5 +1,5 @@
 body{
-    background: radial-gradient(circle, rgba(2,0,36,1) 0%, rgba(0,212,255,1) 60%, rgba(2,0,36,1) 100%);
+    background: radial-gradient(circle, rgba(2,0,36,1) 0%, rgba(0,212,255,1) 60%, rgba(2,0,36,1) 100%) fixed no-repeat;
 }
 h1, h2{
     color: white;
@@ -8,11 +8,13 @@ h1, h2{
 }
 
 .title{
-    font-family: 'Lilita One', cursive;
+    font-family: 'Saira Condensed', sans-serif;
+    font-weight: 40000;
+    font-display: swap;
 }
 
 .utitle{
-    font-family: 'Montserrat', sans-serif; 
+    font-family: 'Saira Condensed', sans-serif;
 }
 
 .tool_img{
@@ -44,45 +46,45 @@ h1, h2{
 .tool_btn{
     text-align: center;
     margin-top: 40px;
-}
-
-.dl_btn{
-    position: relative;
-    color: white;
-    font-size: 30px;
     text-decoration: none;
-    border: 2px solid transparent;
-    border-radius: 1em;
-}
-.dl_btn::before {  
-    transform: scaleX(0);
-    transform-origin: bottom right;
-    border-radius: 1em;
-}
-.dl_btn:hover::before {
-    transform: scaleX(1);
-    transform-origin: bottom left;
-    border-radius: 1em;
-}
-  
-.dl_btn::before {
-    content: " ";
-    display: flex;
-    position: absolute;
-    top: 0; right: 0; bottom: 0; left: 0;
-    inset: 0 0 0 0;
-    background: hsl(200 100% 80%);
-    z-index: -1;
-    transition: transform .3s ease;
-    border: 2px solid transparent;
-    border-radius: 1em;
 }
 
-.icon{
-    text-align: center;
-    margin-top: 10px;
+.dl_btn {
+        background-image: linear-gradient(to right, #4b6cb7 0%, #182848  51%, #4b6cb7  100%);
+        margin: 10px;
+        padding: 15px 45px;
+        text-align: center;
+        text-transform: uppercase;
+        transition: 0.5s;
+        background-size: 200% auto;
+        color: white;            
+        box-shadow: 0 0 20px #eee;
+        border-radius: 10px;
+        text-decoration: none;
 }
+
+.dl_btn:hover {
+        background-position: right center; /* change the direction of the change here */
+        color: #fff;
+        text-decoration: none;
+}
+
 .ghub{
-    color: white;
-    margin-top: 10px;
+    background-image: linear-gradient(to right, #1A2980 0%, #26D0CE  51%, #1A2980  100%);
+    padding: 15px 45px;
+    text-align: center;
+    text-transform: uppercase;
+    transition: 0.5s;
+    background-size: 200% auto;
+    color: white;            
+    box-shadow: 0 0 20px #eee;
+    border-radius: 10px;
+    text-decoration: none;
 }
+
+.ghub:hover{   
+    background-position: right center; /* change the direction of the change here */
+    color: #fff;
+    text-decoration: none;
+}
+
